--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,5 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mypin</title>
   <link href="/css/output.css" rel="stylesheet">
+  <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
 </head>
 <body>
