--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,6 +6,7 @@
         <h1 class="text-2xl font-semibold text-center tracking-tighter ">Welcome to Pinterest</h1>
         <form  action="/register" method="post">
             <input  class="w-full px-3 py-2 mt-2 block border-2 rounded-md" type="text" name="username" placeholder="username" >
+            <input  class="w-full px-3 py-2 mt-2 block border-2 rounded-md" type="text" name="name" placeholder="Full Name" >
             <input  class="w-full px-3 py-2 mt-2 block border-2 rounded-md" type="email" name="email" placeholder="email" >
             <input class="w-full px-3 py-2 mt-2 block border-2 rounded-md" type="password" name="password" placeholder="password" >
             <input class="w-full text-white text-lg  bg-red-600 px-3 py-2 mt-2 block rounded-md" type="submit" value="Register" > </input>    
