--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -35,7 +35,7 @@
         src="/images/uploads/<%= user?.posts[0]?.image %>" 
         alt="">
       </div>
-      <a href="/showposts" class="inline-block text-xl font-semibold mt-3">Created Pins</a>
+      <a href="/createdpins" class="inline-block text-xl font-semibold mt-3">Created Pins</a>
       <h3 class="text-sm font-light opacity-60 "><%= user.posts.length %> Pins</h3>
     </div>
   </div>
