--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,14 +1,47 @@
 <%- include('./partials/header.ejs') %>
 
-<div class="bg-zinc-800 w-full min-h-screen px-20 py-5 text-white ">
-        <h1 class="text-3xl tracking-tighter">Create Pin</h1>
-        <hr class="opacity-10 mt-5">
-        <form action="/createpost" method="post" enctype="multipart/form-data">
-            <input class="block px-3 py-2 mt-2 rounded-lg "  type="file" name="postimage">
-            <input class="block w-1/3 px-3 py-2 mt-2 border-[1px]  rounded-xl  bg-zinc-800"  type="text" name="title" placeholder="title">
-            <textarea class="block w-1/3 px-3 py-2 mt-2 border-[1px] rounded-xl  bg-zinc-800"  name="description"  cols="30" rows="5" placeholder="description"></textarea>
-            <input class="block w-1/3 px-3 py-2 mt-2  rounded-xl  bg-gray-700" type="submit" value="Create Pin" >
-        </form>
+<div class="bg-zinc-800 w-full min-h-screen px-10 py-8 text-white">
+    <h1 class="text-3xl font-semibold tracking-tight mb-5">Create Pin</h1>
+    <hr class="border-t border-gray-600 opacity-20 mb-8">
+
+    <form action="/createpost" method="post" enctype="multipart/form-data" class="flex gap-4 max-w-3xl mx-auto">
+        <label for="postImage" class="upload-label relative flex flex-col items-center justify-center  rounded-lg cursor-pointer w-1/3 bg-zinc-700">
+            <span class="upload-span text-lg mb-2">Upload Image</span>
+            <input id="postImage" class="hidden" type="file" name="postimage">
+            <i class="upload-icon text-2xl ri-upload-2-line "></i>
+            <img id="imagePreview" class="hidden rounded-lg w-full " src="#" alt="Preview Image">
+        </label>
+        <div class="flex flex-col gap-4 w-2/3 mx-auto">
+            <input class="border border-gray-600 bg-zinc-800 rounded-lg py-2 px-4" type="text" name="title" placeholder="Title">
+            <textarea class="border border-gray-600 bg-zinc-800 rounded-lg py-2 px-4" name="description" rows="5" placeholder="Description"></textarea>
+            <button class="bg-gray-700 hover:bg-gray-600 text-white py-2 px-6 rounded-lg w-1/2 mx-auto" type="submit">Publish</button>
+        </div>
+    </form>
 </div>
 
 <%- include('./partials/footer.ejs') %>
+
+<script>
+    document.getElementById('postImage').addEventListener('change', function() {
+    const file = this.files[0];
+    const imgPreview = document.getElementById('imagePreview');
+    const uploadSpan = document.querySelector('.upload-span'); 
+    const uploadIcon = document.querySelector('.upload-icon'); 
+    const uploadLabel = document.querySelector('.upload-label'); 
+
+    if (file) {
+        const reader = new FileReader();
+
+        reader.onload = function(e) {
+            imgPreview.src = e.target.result;
+            imgPreview.classList.remove('hidden');
+            uploadSpan.classList.add('hidden'); 
+            uploadIcon.classList.add('hidden'); 
+            uploadLabel.classList.add('bg-zinc-800'); 
+        }
+
+        reader.readAsDataURL(file);
+    }
+});
+
+</script>
