--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,17 +11,17 @@
 />
 </head>
 <body>
-  
 
   <% if(nav===true ){
     %>
-    <div class="w-full px-10 pt-3 flex justify-between bg-zinc-800 text-white">
-      <div class="flex items-center gap-5 ">
+    <div class="w-full sticky top-0 z-10 shadow-sm px-10 pt-4 flex justify-between bg-zinc-800 text-white">
+      <div class="flex items-center gap-5 mb-4">
         <img class="w-12 h-12" src="https://i.pinimg.com/originals/d3/d1/75/d3d175e560ae133f1ed5cd4ec173751a.png" alt="pin logo" />
         <a class="hover:bg-zinc-200 hover:text-zinc-800 rounded-full px-2 py-1 " href="#">Home</a>
         <a class="hover:bg-zinc-200 hover:text-zinc-800 rounded-full px-2 py-1 " href="/create">Create</a>
       </div>
-      <div class="flex gap-5 items-center">
+      <%- include('./search.ejs') %>
+      <div class="flex gap-5 items-center mb-4">
         <a class="hover:bg-zinc-200 hover:text-zinc-800 rounded-full px-2 py-1 " href="/profile">My profile</a>
         <a class="hover:bg-zinc-200 hover:text-zinc-800 rounded-full px-2 py-1 " href="/feed">Feed</a>
         <a class="hover:bg-zinc-200 hover:text-zinc-800 rounded-full px-2 py-1 " href="/">Logout</a>
