--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header.ejs') %>
 
 <div class="w-full h-screen bg-center bg-cover bg-[url('https://images.unsplash.com/photo-1533035353720-f1c6a75cd8ab?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')] flex items-center justify-center">
-    <div class="h-[70vh] w-80 p-4  m-2 bg-zinc-100 rounded-lg">
+    <div class=" w-80 p-4  m-2 bg-zinc-100 rounded-lg">
         <div class=" flex justify-center"><img class="w-12 h-12" src="https://i.pinimg.com/originals/d3/d1/75/d3d175e560ae133f1ed5cd4ec173751a.png" alt="pin logo" /></div>
         <h1 class="text-2xl font-semibold text-center tracking-tighter ">Welcome to Pinterest</h1>
         <form  action="/register" method="post">
